[package]
name = "stabilizer-stream"
version = "0.1.1"
authors = [
    "Robert Jördens <rj@quartiq.de>",
    "Ryan Summers <ryan.summers@vertigo-designs.com>",
]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.70"
description = "Tools to interact with Stabilizer streams, including PSD analysis app"
repository = "https://github.com/quartiq/stabilizer-streaming"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
num_enum = "0.7"
log = "0.4"
eframe = { version = "0.30", default-features = false, features = [
    "wayland",
    "x11",
    "glow",
    "default_fonts",
    "persistence",
] }
egui_plot = "0.30"
env_logger = "0.11"
bytemuck = { version = "1.13.1", features = [
    "latest_stable_rust",
    "extern_crate_std",
] }
thiserror = "2"
anyhow = "1.0.75"
socket2 = "0.5.4"
idsp = "0.16"
rustfft = "6.1.0"
rand = { version = "0.8.5", features = ["small_rng"] }
derive_builder = "0.20.0"

[profile.release]
# debug = 1
opt-level = 3

[profile.dev.package."*"]
# opt-level = 2

[patch.crates-io]
eframe = { git = "https://github.com/emilk/egui", rev = "f0d7c74e838b8e8920a22e7515990fbe057ec218" }   # egui master 2025-01-08
egui = { git = "https://github.com/emilk/egui", rev = "f0d7c74e838b8e8920a22e7515990fbe057ec218" }     # egui master 2025-01-08
emath = { git = "https://github.com/emilk/egui", rev = "f0d7c74e838b8e8920a22e7515990fbe057ec218" }    # egui master 2025-01-08
# egui_plot = { git = "https://github.com/quartiq/egui_plot", rev = "80e2199a2e121db288fe6b0099d91c35acc75a7c" }
egui_plot = { path = "../egui_plot/egui_plot" }
