[package]
name = "stabilizer-stream"
version = "0.1.1"
authors = [
    "Robert Jördens <rj@quartiq.de>",
    "Ryan Summers <ryan.summers@vertigo-designs.com>",
]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.70"
description = "Tools to interact with Stabilizer streams, including PSD analysis app"
repository = "https://github.com/quartiq/stabilizer-streaming"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
num_enum = "0.7"
log = "0.4"
eframe = { version = "0.33", default-features = false, features = [
    "wayland",
    "x11",
    "glow",
    "default_fonts",
    "persistence",
] }
egui_plot = "0.34"
env_logger = "0.11"
bytemuck = { version = "1.13.1", features = [
    "latest_stable_rust",
    "extern_crate_std",
] }
thiserror = "2"
anyhow = "1.0.75"
socket2 = "0.6.0"
idsp = "0.20"
dsp-process = "0.1.0"
rustfft = "6.1.0"
rand = { version = "0.9.0", features = ["small_rng"] }
derive_builder = "0.20.0"

[profile.release]
# debug = 1
opt-level = 3

[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
# opt-level = 2
debug = false

[profile.debugging]
inherits = "dev"
debug = true
